Revisiones de errores en algunos archivos java